HCMPRE-1254-Fixed community validator